[package]
name = "infinity_q"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
rand = "0.8.5"
